--- a/app/views/layouts/angular/_multi_auth_credentials.html.haml
+++ b/app/views/layouts/angular/_multi_auth_credentials.html.haml
@@ -107,8 +107,9 @@
                                             :id                     => record.id,
                                             :prefix                 => "service_account",
                                             :basic_info_needed      => true}
+        -# C2C: Added condition for OTC cloud provider
         .col-md-12{"ng-if" => "#{ng_model}.emstype != 'gce' && #{ng_model}.emstype != 'ec2'" || "#{ng_model}" != "emsCommonModel"}
-          %div{"ng-if" => "#{ng_model}.emstype == 'openstack' || (#{ng_model}.ems_controller == 'ems_infra' && #{ng_model}.emstype != 'rhevm' && #{ng_model}.emstype != 'kubevirt')  || #{ng_model}.emstype == 'vmware_cloud' || #{ng_model}.emstype == 'azure_stack'"}
+          %div{"ng-if" => "#{ng_model}.emstype == 'openstack' || #{ng_model}.emstype == 'otc' || (#{ng_model}.ems_controller == 'ems_infra' && #{ng_model}.emstype != 'rhevm' && #{ng_model}.emstype != 'kubevirt')  || #{ng_model}.emstype == 'vmware_cloud' || #{ng_model}.emstype == 'azure_stack'"}
             = render :partial => "layouts/angular-bootstrap/endpoints_angular",
                                    :locals  => {:ng_show                => true,
                                                 :ng_model               => "#{ng_model}",
@@ -246,7 +247,8 @@
               = _("Used to gather Capacity & Utilization metrics.")
       = miq_tab_content('amqp', 'default') do
         .form-group
-          .col-md-12{"ng-if" => "#{ng_model}" == "emsCommonModel" && "#{ng_model}.emstype == 'openstack' || #{ng_model}.emstype == 'openstack_infra' || #{ng_model}.emstype == 'vmware_cloud' || #{ng_model}.emstype == 'nuage_network'"}
+          -# C2C: Added condition for OTC cloud provider
+          .col-md-12{"ng-if" => "#{ng_model}" == "emsCommonModel" && "#{ng_model}.emstype == 'openstack' || #{ng_model}.emstype == 'openstack_infra' || #{ng_model}.emstype == 'vmware_cloud' || #{ng_model}.emstype == 'nuage_network' || #{ng_model}.emstype == 'otc'"}
             %label.radio-inline.control-label{"for" => "none_radio", "ng-show" => "#{ng_model}.emstype == 'vmware_cloud' || #{ng_model}.emstype == 'nuage_network'"}
               %input{:type         => "radio",
                      :name         => "event_stream_selection",
@@ -257,7 +259,8 @@
                      "ng-change"   => "radioSelectionChanged()",
                      "checkchange" => ""}
                 = _("None")
-            %label.radio-inline.control-label{"for" => "ceilometer_radio", "ng-show" => "#{ng_model}.emstype == 'openstack' || #{ng_model}.emstype == 'openstack_infra'"}
+            -# C2C: Added condition for OTC cloud provider
+            %label.radio-inline.control-label{"for" => "ceilometer_radio", "ng-show" => "#{ng_model}.emstype == 'openstack' || #{ng_model}.emstype == 'openstack_infra'|| #{ng_model}.emstype == 'otc'"}
               %input{:type         => "radio",
                      :name         => "event_stream_selection",
                      :id           => "ceilometer_radio",
@@ -294,7 +297,8 @@
                                     :prefix            => "amqp",
                                     :basic_info_needed => true}
         .form-group
-          .col-md-12{"ng-if" => "#{ng_model}" == "emsCommonModel" && "#{ng_model}.emstype == 'openstack' || #{ng_model}.emstype == 'openstack_infra'"}
+          -# C2C: Added condition for OTC cloud provider
+          .col-md-12{"ng-if" => "#{ng_model}" == "emsCommonModel" && "#{ng_model}.emstype == 'openstack' || #{ng_model}.emstype == 'openstack_infra'|| #{ng_model}.emstype == 'otc'"}
             %span{:style => "color:black"}
               %div{"ng-if" => "emsCommonModel.event_stream_selection == 'amqp'"}
                 = _("Used to authenticate with OpenStack AMQP Messaging Bus for event handling. Configure AMQP if eventing is not enabled on Ceilometer.")
@@ -560,6 +564,16 @@
     miq_tabs_show_hide("#metrics_tab", false);
     miq_tabs_show_hide("#console_tab", false);
     miq_tabs_show_hide("#ssh_keypair_tab", true);
+    miq_tabs_show_hide("#smartstate_docker_tab", false);
+    miq_tabs_init('#auth_tabs');
+    $('#auth_tabs').show();
+-# C2C: Added seprate condition for OTC cloud provider to remove Events and RSA Key pair menu's while provider validation
+%div{"ng-if" => "#{ng_model}.emstype == 'otc'"}
+  :javascript
+    miq_tabs_show_hide("#amqp_tab", false);
+    miq_tabs_show_hide("#metrics_tab", false);
+    miq_tabs_show_hide("#console_tab", false);
+    miq_tabs_show_hide("#ssh_keypair_tab", false);
     miq_tabs_show_hide("#smartstate_docker_tab", false);
     miq_tabs_init('#auth_tabs');
     $('#auth_tabs').show();
