--- a/app/views/ops/_schedule_form_filter.html.haml
+++ b/app/views/ops/_schedule_form_filter.html.haml
@@ -122,6 +122,19 @@
                            "selectpicker-for-select-tag" => "")
               %span.help-block{"ng-show" => "angularForm.keystone_api_version.$invalid"}
 
+        -# C2C: Added code for OTC cloud provider
+        %apiversion{'ng-if' => 'swiftSecurityProtocolSelect()'}
+          .form-group{"ng-class" => "{'has-error': angularForm.keystone_api_version.$invalid}"}
+            %label.col-md-2.control-label
+              = _("API Version")
+            .col-md-8
+              = select_tag('keystone_api_version', options_for_select(@otc_api_versions_options_for_select),
+                           "ng-model"                    => "scheduleModel.keystone_api_version",
+                           "ng-required"                 => "swiftSecurityProtocolRequired()",
+                           "checkchange"                 => "",
+                           "selectpicker-for-select-tag" => "")
+              %span.help-block{"ng-show" => "angularForm.keystone_api_version.$invalid"}
+
         %domainid{'ng-if' => 'swiftSecurityProtocolSelect()'}
           .form-group{"ng-class" => "{'has-error': angularForm.v3_domain_ident.$invalid}", "ng-if" => "scheduleModel.keystone_api_version == 'v3'"}
             %label.col-md-2.control-label{"for" => "v3_domain_ident"}
@@ -157,6 +170,36 @@
                                 "required"                => true,
                                 "checkchange"             => ""}
             %span.help-block{"ng-show" => "angularForm.openstack_region.$invalid"}
+              = _("Required")
+
+        -# C2C: Added code for OTC cloud provider
+        .form-group{"ng-class" => "{'has-error': angularForm.otc_region.$invalid}",
+                    "ng-if"    => 'swiftSecurityProtocolSelect()'}
+          %label.col-md-2.control-label{"for" => "ems_region_input"}
+            = _('Region')
+          .col-md-4
+            %input.form-control{"type"                    => "text",
+                                "id"                      => "otc_region",
+                                "name"                    => "otc_region",
+                                "ng-model"                => "scheduleModel.otc_region",
+                                "required"                => true,
+                                "checkchange"             => ""}
+            %span.help-block{"ng-show" => "angularForm.otc_region.$invalid"}
+              = _("Required")
+
+        -# C2C: Added code for OTC cloud provider
+        .form-group{"ng-class" => "{'has-error': angularForm.project_name.$invalid}",
+                    "ng-if"    => 'swiftSecurityProtocolSelect()'}
+          %label.col-md-2.control-label{"for" => "ems_project_name"}
+            = _('Project Name')
+          .col-md-4
+            %input.form-control{"type"                    => "text",
+                                "id"                      => "project_name",
+                                "name"                    => "project_name",
+                                "ng-model"                => "scheduleModel.project_name",
+                                "required"                => true,
+                                "checkchange"             => ""}
+            %span.help-block{"ng-show" => "angularForm.project_name.$invalid"}
               = _("Required")
 
         %region{'ng-if' => 'regionSelect()'}
