--- a/app/views/shared/views/_prov_dialog.html.haml
+++ b/app/views/shared/views/_prov_dialog.html.haml
@@ -173,6 +173,13 @@
           :dialog                     => dialog,
           :prefix                     => "/miq_request/",
           :keys                       => keys})
+    -# C2C: Added code for OTC cloud provider
+    - if wf.kind_of?(ManageIQ::Providers::Otc::CloudManager::ProvisionWorkflow)
+      = render(:partial => "/miq_request/prov_dialog_cloud_quota",
+        :locals         => {:workflow => wf,
+          :dialog                     => dialog,
+          :prefix                     => "/miq_request/",
+          :keys                       => keys})
   - when :network
     - keys = [:vlan, :mac_address]
     - keys << :subnet if wf.kind_of?(ManageIQ::Providers::Microsoft::InfraManager::ProvisionWorkflow)
