--- a/app/views/shared/views/ems_common/angular/_form.html.haml
+++ b/app/views/shared/views/ems_common/angular/_form.html.haml
@@ -142,6 +142,18 @@
                      "checkchange"                 => "",
                      "selectpicker-for-select-tag" => "")
 
+    -# C2C: Added code for OTC Cloud provider
+    .form-group{"ng-class" => "{'has-error': angularForm.api_version.$invalid}", "ng-if" => "emsCommonModel.emstype == 'otc'"}
+      %label.col-md-2.control-label{"for" => "ems_api_version"}
+        = _("API Version")
+      .col-md-8
+        = select_tag('api_version',
+                     options_for_select(@otc_api_versions),
+                     "ng-model"                    => "emsCommonModel.api_version",
+                     "id"                          => "ems_api_version",
+                     "checkchange"                 => "",
+                     "selectpicker-for-select-tag" => "")
+
     .form-group{"ng-class" => "{'has-error': angularForm.vmware_cloud_api_version.$invalid}", "ng-if" => "emsCommonModel.emstype == 'vmware_cloud'"}
       %label.col-md-2.control-label{"for" => "ems_api_version"}
         = _("API Version")
@@ -178,7 +190,20 @@
                             "ng-model"                => "emsCommonModel.provider_region",
                             "checkchange"             => ""}
 
-    .form-group{"ng-class" => "{'has-error': angularForm.keystone_v3_domain_id.$invalid}", "ng-if" => "emsCommonModel.api_version == 'v3' && (emsCommonModel.emstype == 'openstack' || emsCommonModel.emstype == 'openstack_infra')"}
+    -# C2C: Added code for OTC cloud provider
+    .form-group{"ng-class" => "{'has-error': angularForm.api_version.$invalid}", "ng-if"    => "emsCommonModel.emstype == 'otc'"}
+      %label.col-md-2.control-label{"for" => "ems_region_input"}
+        = _('Region')
+      .col-md-4
+        %input.form-control{"type"                    => "text",
+                            "id"                      => "ems_region_input",
+                            "name"                    => "provider_region",
+                            "ng-model"                => "emsCommonModel.provider_region",
+                            "required"                => true,
+                            "checkchange"             => ""}
+
+    -# C2C: Added condition for OTC cloud provider
+    .form-group{"ng-class" => "{'has-error': angularForm.keystone_v3_domain_id.$invalid}", "ng-if" => "emsCommonModel.api_version == 'v3' && (emsCommonModel.emstype == 'openstack' || emsCommonModel.emstype == 'openstack_infra' || emsCommonModel.emstype == 'otc')"}
       %label.col-md-2.control-label{"for" => "ems_keystone_domain_id"}
         = _('Keystone V3 Domain ID')
       .col-md-4
@@ -209,6 +234,19 @@
                      "id"                          => "ems_infra_provider_id",
                      "checkchange"                 => "",
                      "selectpicker-for-select-tag" => "")
+
+    -# C2C: Added code for OTC cloud provider
+    .form-group{"ng-class" => "{'has-error': angularForm.project_name.$invalid}", "ng-if" => ("emsCommonModel.emstype == 'otc'")}
+      %label.col-md-2.control-label{"for" => "ems_project_name"}
+        = _('Project Name')
+      .col-md-4
+        %input.form-control{"type"        => "text",
+                            "id"          => "ems_project_name",
+                            "name"        => "project_name",
+                            "ng-model"    => "emsCommonModel.project_name",
+                            "maxlength"   => "#{ViewHelper::MAX_NAME_LEN}",
+                            "required"    => "",
+                            "checkchange" => ""}
 
     .form-group{"ng-class" => "{'has-error': angularForm.zone.$invalid}", "ng-if" => "!emsCommonModel.zone_hidden"}
       %label.col-md-2.control-label{"for" => "ems_zone"}
