--- a/app/views/ops/_schedule_form_filter.html.haml
+++ b/app/views/ops/_schedule_form_filter.html.haml
@@ -187,7 +187,7 @@
             %span.help-block{"ng-show" => "angularForm.otc_region.$invalid"}
               = _("Required")
 
-        -# C2C: Added code for OTC cloud provider
+        -# C2C: Added code for OTC Cloud provider for Project name parameter
         .form-group{"ng-class" => "{'has-error': angularForm.project_name.$invalid}",
                     "ng-if"    => 'swiftSecurityProtocolSelect()'}
           %label.col-md-2.control-label{"for" => "ems_project_name"}
